--- a/index.html
+++ b/index.html
@@ -79,24 +79,142 @@
               للمنصة</button>
           </div>
         </div>
-
-
       </section>
       <!-- About Section -->
-      <section id="About">
-
+      <section class="d-flex justify-content-center align-items-center pt-5" id="About">
+        <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-5">
+          <div class="col-12 col-md-6 w-md-75">
+            <div class="aboutContent">
+              <h1>نبذة تعريفية</h1>
+              <h2>أ/ محمد النجار</h2>
+              <ul>
+                <li>معلم خبير رياضيات</p>
+                <li>حاصل على بكالوريوس علوم رياضيات و ماجستير في حساب المثلثات و دبلومة في شرح الرياضيات</p>
+                <li>خبرة أكثر من 25 سنة في المرحلة الثانوية</p>
+              </ul>
+            </div>
+          </div>
+          <div class="photo col-12 col-md-6 position-relative">
+            <img src="./images/dots.png" class="img-fluid dotsOne position-absolute " alt="">
+            <img src="./images/dots.png" class="img-fluid dotsTwo position-absolute " alt="">
+            <img src="./images/teacher.jpg" class="img-fluid" alt="">
+          </div>
+        </div>
       </section>
 
       <!-- Videos Section -->
       <section id="Videos">
+        <div class="container d-flex flex-column align-items-center justify-content-center gap-5">
+          <div class="d-flex align-items-center justify-content-center position-relative">
+            <h2 class="videosTitle">الفيديوهات المجانية</h2>
+            <img src="./images/kodak.png" class="img-fluid kodakOne" alt="kodak">
+            <img src="./images/kodak.png" class="img-fluid kodakTwo" alt="kodak">
+          </div>
+          <div class="videoCards d-flex justify-content-between align-items-center gap-1 mt-5">
+            <div class="row">
+              <div class="col-12 col-sm-6 col-lg-3 col-md-4 p-3">
+                <div class="videoCard">
+                  <img src="./images/video1.jpg" class="videoImg" alt="">
+                  <div class="videoTxt position-absolute ">
+                    <h3>الجزر التربيعي</h3>
+                    <p>مراجعة على الأسس و شرح الجزر التربيعي</p>
+                  </div>
+                  <div class="playButton d-flex justify-content-center align-items-center">
+                    <i class="fa-solid fa-play fa-lg"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-6 col-lg-3 col-md-4 p-3">
+                <div class="videoCard w-100">
+                  <img src="./images/video2.jpg" class="videoImg" alt="">
+                  <div class="videoTxt position-absolute ">
+                    <h3>المعادلات</h3>
+                    <p>شرح المعادلات و حل مسائل</p>
+                  </div>
+                  <div class="playButton d-flex justify-content-center align-items-center">
+                    <i class="fa-solid fa-play fa-lg"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-6 col-lg-3 col-md-4 p-3">
+                <div class="videoCard w-100">
+                  <img src="./images/video3.jpg" class="videoImg" alt="">
+                  <div class="videoTxt position-absolute ">
+                    <h3>التفاضل الجزئي</h3>
+                    <p>مراجعة على التفاضل و شرح التفاضل الجزئي</p>
+                  </div>
+                  <div class="playButton d-flex justify-content-center align-items-center">
+                    <i class="fa-solid fa-play fa-lg"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-6 col-lg-3 col-md-4 p-3">
+                <div class="videoCard w-100">
+                  <img src="./images/video4.jpg" class="videoImg" alt="">
+                  <div class="videoTxt position-absolute ">
+                    <h3>مسائل متنوعة</h3>
+                    <p>مراجعة على ما سبق</p>
+                  </div>
+                  <div class="playButton d-flex justify-content-center align-items-center">
+                    <i class="fa-solid fa-play fa-lg"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-6 col-lg-3 col-md-4 p-3">
+                <div class="videoCard">
+                  <img src="./images/video1.jpg" class="videoImg" alt="">
+                  <div class="videoTxt position-absolute ">
+                    <h3>الجزر التربيعي</h3>
+                    <p>مراجعة على الأسس و شرح الجزر التربيعي</p>
+                  </div>
+                  <div class="playButton d-flex justify-content-center align-items-center">
+                    <i class="fa-solid fa-play fa-lg"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-6 col-lg-3 col-md-4 p-3">
+                <div class="videoCard w-100">
+                  <img src="./images/video2.jpg" class="videoImg" alt="">
+                  <div class="videoTxt position-absolute ">
+                    <h3>المعادلات</h3>
+                    <p>شرح المعادلات و حل مسائل</p>
+                  </div>
+                  <div class="playButton d-flex justify-content-center align-items-center">
+                    <i class="fa-solid fa-play fa-lg"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-6 col-lg-3 col-md-4 p-3">
+                <div class="videoCard w-100">
+                  <img src="./images/video3.jpg" class="videoImg" alt="">
+                  <div class="videoTxt position-absolute ">
+                    <h3>التفاضل الجزئي</h3>
+                    <p>مراجعة على التفاضل و شرح التفاضل الجزئي</p>
+                  </div>
+                  <div class="playButton d-flex justify-content-center align-items-center">
+                    <i class="fa-solid fa-play fa-lg"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-sm-6 col-lg-3 col-md-4 p-3">
+                <div class="videoCard w-100">
+                  <img src="./images/video4.jpg" class="videoImg" alt="">
+                  <div class="videoTxt position-absolute ">
+                    <h3>مسائل متنوعة</h3>
+                    <p>مراجعة على ما سبق</p>
+                  </div>
+                  <div class="playButton d-flex justify-content-center align-items-center">
+                    <i class="fa-solid fa-play fa-lg"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- Contact Section -->
       <section id="Contact">
-        <div class="cover">
-          <img class="img-fluid" src="./images/contact.png" alt="">
-          <img class="img-fluid" src="./images/contact.png" alt="">
-        </div>
         <div class="card d-flex align-items-center justify-content-center">
           <h2>تواصل معنا</h2>
           <form class="row justify-content-center align-items-center flex-column g-3">
